# GS_web

./: .gitignore  README.md  package-lock.json  pyproject.toml
app/: layout.tsx
back_end/: pyproject.toml  test.html
back_end/src/: main.py  routers.py  service.py
front_end/: README.md  package-lock.json  package.json  tailwind.config.ts
front_end/app/: layout.tsx  page.tsx  providers.tsx
front_end/app/dashboard/: layout.tsx  page.tsx
front_end/app/sample/: page.tsx
front_end/app/sample/[img_id]/: page.tsx
front_end/app/upload/: layout.tsx  page.tsx
front_end/ui/: charts.tsx
front_end/ui/dashboard/: navbar.tsx  picture_pool.tsx
src/: main.py  routers.py  service.py
src/config/: settings.toml
