[project]
name = "GS_web"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "daysgone", email = "xymdaysgone@qq.com"},
]
dependencies = ["fastapi>=0.115.11", "loguru>=0.7.3", "python-multipart>=0.0.20", "uvicorn>=0.33.0"]
requires-python = "==3.8.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
