[tool.poetry]
name = "back-end"
version = "0.1.0"
description = ""
authors = ["Daysgone <79004213+Days-gone@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.109.2"
dynaconf = "^3.2.4"
uvicorn = "^0.27.1"
loguru = "^0.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
